--- a/packages.config
+++ b/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AeroWizard" version="2.1.10" targetFramework="net462" />
-  <package id="CloudFlareUtilities" version="0.4.0-alpha" targetFramework="net462" />
-  <package id="EngineIoClientDotNet" version="1.0.4" targetFramework="net462" />
+  <package id="CloudFlareUtilities" version="1.0.0" targetFramework="net462" />
+  <package id="EngineIoClientDotNet" version="1.0.5" targetFramework="net462" />
   <package id="EPPlus" version="4.1.1" targetFramework="net462" />
   <package id="Geocoding.net" version="3.6.1" targetFramework="net462" />
   <package id="GeoCoordinate.NetStandard1" version="1.0.1" targetFramework="net462" />
   <package id="Google.Api.CommonProtos" version="1.1.0" targetFramework="net462" />
   <package id="Google.Api.Gax" version="2.2.1" targetFramework="net462" />
-  <package id="Google.Apis" version="1.32.0" targetFramework="net462" />
-  <package id="Google.Apis.Auth" version="1.32.0" targetFramework="net462" />
-  <package id="Google.Apis.Core" version="1.32.0" targetFramework="net462" />
+  <package id="Google.Apis" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.32.2" targetFramework="net462" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net462" />
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
-  <package id="Markdig" version="0.14.8" targetFramework="net462" />
+  <package id="Markdig" version="0.14.9" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
@@ -33,18 +33,18 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.4" targetFramework="net462" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.5" targetFramework="net462" />
   <package id="POGOProtos.Core" version="2.22.0" targetFramework="net462" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net462" />
-  <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="S2Geometry" version="1.0.3" targetFramework="net462" />
-  <package id="Selenium.Support" version="3.8.0" targetFramework="net462" />
-  <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net462" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.34.0" targetFramework="net462" />
-  <package id="SocketIoClientDotNet" version="1.0.4" targetFramework="net462" />
+  <package id="Selenium.Support" version="3.9.1" targetFramework="net462" />
+  <package id="Selenium.WebDriver" version="3.9.1" targetFramework="net462" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.35.0" targetFramework="net462" />
+  <package id="SocketIoClientDotNet" version="1.0.5" targetFramework="net462" />
   <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.9.0" targetFramework="net462" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net462" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
@@ -100,7 +100,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="Telegram.Bot" version="13.4.0" targetFramework="net462" />
   <package id="TinyIoC" version="1.3" targetFramework="net462" developmentDependency="true" />
-  <package id="WebSocket4Net" version="0.15.1" targetFramework="net462" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="net462" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net462" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
